@@ -1,19 +1,17 @@
 package org.ihtsdo.authoringservices.service.impl;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 import jakarta.annotation.PostConstruct;
 import jakarta.jms.JMSException;
 import net.rcarz.jiraclient.Status;
-import net.rcarz.jiraclient.User;
 import net.rcarz.jiraclient.*;
 import net.sf.json.JSON;
 import org.apache.activemq.command.ActiveMQQueue;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.math.NumberUtils;
+import org.ihtsdo.authoringservices.domain.User;
 import org.ihtsdo.authoringservices.domain.*;
-import org.ihtsdo.authoringservices.entity.Validation;
 import org.ihtsdo.authoringservices.service.*;
 import org.ihtsdo.authoringservices.service.exceptions.ServiceException;
 import org.ihtsdo.authoringservices.service.jira.ImpersonatingJiraClientFactory;
@@ -36,26 +34,19 @@ import org.slf4j.event.Level;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 
-import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static org.ihtsdo.authoringservices.service.impl.JiraProjectServiceImpl.LIMIT_UNLIMITED;
 import static org.ihtsdo.authoringservices.service.impl.JiraProjectServiceImpl.UNIT_TEST;
 
-public class JiraTaskServiceImpl implements TaskService {
+public class JiraTaskServiceImpl extends TaskServiceBase implements TaskService {
 
     public static final String INCLUDE_ALL_FIELDS = "*all";
 
-    private static final String CRS_JIRA_LABEL = "CRS";
-    private static final String INT_TASK_STATE_CHANGE_QUEUE = "int-authoring";
     private static final String AUTHORING_TASK_TYPE = "SCA Authoring Task";
-    private static final String SHARED = "SHARED";
-
     private static final String EXCLUDE_STATUSES = " AND (status != \"" + TaskStatus.COMPLETED.getLabel()
             + "\" AND status != \"" + TaskStatus.DELETED.getLabel() + "\") ";
-    private static final String TASK_NOT_FOUND_MSG = "Task not found ";
     private static final String OR_STATUS_CLAUSE = "\" OR status = \"";
 
     @Autowired
@@ -71,12 +62,6 @@ public class JiraTaskServiceImpl implements TaskService {
     private ReviewService reviewService;
 
     @Autowired
-    private ValidationService validationService;
-
-    @Autowired
-    private UiStateService uiService;
-
-    @Autowired
     private InstanceConfiguration instanceConfiguration;
 
     @Autowired
@@ -86,23 +71,13 @@ public class JiraTaskServiceImpl implements TaskService {
     private EmailService emailService;
 
     @Autowired
-    private NotificationService notificationService;
-
-    @Autowired
-    private PromotionService promotionService;
-
-    @Autowired
-    private ProjectService projectService;
+    private ProjectService jiraProjectService;
 
     @Value("${task-state-change.notification-queues}")
     private Set<String> taskStateChangeNotificationQueues;
 
-    @Value("${crs.int.jira.issueKey}")
-    private String intCrsIssueKeyPrefix;
-
     private final ImpersonatingJiraClientFactory jiraClientFactory;
     private final Set<String> myTasksRequiredFields;
-
     private final String jiraCrsIdField;
     private final String jiraOrganizationField;
     private final String jiraReviewerField;
@@ -163,25 +138,14 @@ public class JiraTaskServiceImpl implements TaskService {
         }
     }
 
+    @Override
+    public boolean isUseNew(String taskKey) {
+        return false;
+    }
 
     @Override
     public AuthoringMain retrieveMain() throws BusinessServiceException {
         return buildAuthoringMain();
-    }
-
-    private AuthoringMain buildAuthoringMain() throws BusinessServiceException {
-        try {
-            String path = PathHelper.getProjectPath(null, null);
-            Collection<String> paths = Collections.singletonList(path);
-            final ImmutableMap<String, Validation> validationMap = validationService.getValidations(paths);
-            final String branchState = branchService.getBranchStateOrNull(PathHelper.getMainPath());
-            final String latestClassificationJson = classificationService
-                    .getLatestClassification(PathHelper.getMainPath());
-            final Validation validation = validationMap.get(path);
-            return new AuthoringMain(path, branchState, validation != null ? validation.getStatus() : null, latestClassificationJson);
-        } catch (ExecutionException | RestClientException | ServiceException e) {
-            throw new BusinessServiceException("Failed to retrieve Main", e);
-        }
     }
 
     @Override
@@ -210,7 +174,7 @@ public class JiraTaskServiceImpl implements TaskService {
     public AuthoringTask retrieveTask(String projectKey, String taskKey, Boolean lightweight) throws BusinessServiceException {
         try {
             Issue issue = getIssue(taskKey);
-            final List<AuthoringTask> authoringTasks = buildAuthoringTasks(Collections.singletonList(issue), lightweight);
+            final List<AuthoringTask> authoringTasks = buildAuthoringTasks(new ArrayList<>(List.of(issue)), lightweight);
             return !authoringTasks.isEmpty() ? authoringTasks.get(0) : null;
         } catch (JiraException e) {
             if (e.getCause() instanceof RestException restException && restException.getHttpStatusCode() == 404) {
@@ -339,7 +303,7 @@ public class JiraTaskServiceImpl implements TaskService {
             throw new BusinessServiceException("Failed to create Jira task", e);
         }
 
-        AuthoringTask authoringTask = new AuthoringTask(jiraIssue, projectService.getProjectBaseUsingCache(projectKey), jiraReviewerField, jiraReviewersField);
+        AuthoringTask authoringTask = new AuthoringTask(jiraIssue, jiraProjectService.getProjectBaseUsingCache(projectKey), jiraReviewerField, jiraReviewersField);
         // Create project branch if needed
         try {
             branchService.createBranchIfNeeded(PathHelper.getParentPath(authoringTask.getBranchPath()));
@@ -351,8 +315,10 @@ public class JiraTaskServiceImpl implements TaskService {
         return authoringTask;
     }
 
-    private List<AuthoringTask> buildAuthoringTasks(List<Issue> tasks, Boolean lightweight) throws BusinessServiceException {
+    @Override
+    protected List<AuthoringTask> buildAuthoringTasks(Collection<?> collection, Boolean lightweight) throws BusinessServiceException {
         final TimerUtil timer = new TimerUtil("BuildTaskList", Level.DEBUG);
+        List<Issue> tasks = (List<Issue>) collection;
         List<AuthoringTask> allTasks = new ArrayList<>();
         final SnowstormRestClient snowstormRestClient = snowstormRestClientFactory.getClient();
         List<CodeSystem> codeSystems = snowstormRestClient.getCodeSystems();
@@ -365,7 +331,7 @@ public class JiraTaskServiceImpl implements TaskService {
                 projectKeys.add(issue.getProject().getKey());
             }
 
-            final Map<String, ProjectDetails> projectKeyToBranchBaseMap = projectService.getProjectDetailsCache().getAll(projectKeys);
+            final Map<String, ProjectDetails> projectKeyToBranchBaseMap = jiraProjectService.getProjectDetailsCache().getAll(projectKeys);
             for (Issue issue : tasks) {
                 buildAuthoringTask(lightweight, issue, projectKeyToBranchBaseMap, allTasks, codeSystems, timer, startedTasks);
             }
@@ -381,29 +347,6 @@ public class JiraTaskServiceImpl implements TaskService {
         return allTasks;
     }
 
-    private void setValidationStatusForAuthoringTasks(Map<String, AuthoringTask> startedTasks, TimerUtil timer) throws ExecutionException {
-        Set<String> paths = startedTasks.keySet();
-        final ImmutableMap<String, Validation> validationMap = validationService.getValidations(paths);
-        timer.checkpoint("Recovered " + (validationMap == null ? "null" : validationMap.size()) + " ValidationStatuses");
-
-        if (validationMap == null || validationMap.isEmpty()) {
-            String branchPath = paths.iterator().next();
-            logger.warn("Failed to recover validation statuses for {} branches including '{}'.", paths.size(), branchPath);
-        } else {
-            for (final String path : paths) {
-                Validation validation = validationMap.get(path);
-                if (validation != null) {
-                    if (ValidationJobStatus.COMPLETED.name().equals(validation.getStatus())
-                            && validation.getContentHeadTimestamp() != null
-                            && !startedTasks.get(path).getBranchHeadTimestamp().equals(validation.getContentHeadTimestamp())) {
-                        startedTasks.get(path).setLatestValidationStatus(ValidationJobStatus.STALE.name());
-                    } else {
-                        startedTasks.get(path).setLatestValidationStatus(validation.getStatus());
-                    }
-                }
-            }
-        }
-    }
 
     private void buildAuthoringTask(Boolean lightweight, Issue issue, Map<String, ProjectDetails> projectKeyToBranchBaseMap, List<AuthoringTask> allTasks, List<CodeSystem> codeSystems, TimerUtil timer, Map<String, AuthoringTask> startedTasks) throws ServiceException, RestClientException {
         final ProjectDetails projectDetails = projectKeyToBranchBaseMap.get(issue.getProject().getKey());
@@ -444,7 +387,7 @@ public class JiraTaskServiceImpl implements TaskService {
         }
     }
 
-    private static void setLatestCodeSystemVersionTimestampToAuthoringTask(Issue issue, List<CodeSystem> codeSystems, ProjectDetails projectDetails, AuthoringTask task) {
+    private void setLatestCodeSystemVersionTimestampToAuthoringTask(Issue issue, List<CodeSystem> codeSystems, ProjectDetails projectDetails, AuthoringTask task) {
         final String projectPath = PathHelper.getProjectPath(projectDetails.baseBranchPath(), issue.getProject().getKey());
         String projectParentPath = PathHelper.getParentPath(projectPath);
         CodeSystem codeSystem = codeSystems.stream().filter(c -> projectParentPath.equals(c.getBranchPath())).findFirst().orElse(null);
@@ -455,32 +398,6 @@ public class JiraTaskServiceImpl implements TaskService {
         }
         if (codeSystem != null && codeSystem.getLatestVersion() != null) {
             task.setLatestCodeSystemVersionTimestamp(codeSystem.getLatestVersion().getImportDate().getTime());
-        }
-    }
-
-    private void setTaskStatusFromAutomatedPromotionIfAny(AuthoringTask task) {
-        ProcessStatus autoPromotionStatus = promotionService.getAutomateTaskPromotionStatus(task.getProjectKey(), task.getKey());
-        if (autoPromotionStatus != null) {
-            switch (autoPromotionStatus.getStatus()) {
-                case "Queued":
-                    task.setStatus(TaskStatus.AUTO_QUEUED);
-                    break;
-                case "Rebasing":
-                    task.setStatus(TaskStatus.AUTO_REBASING);
-                    break;
-                case "Classifying":
-                    task.setStatus(TaskStatus.AUTO_CLASSIFYING);
-                    break;
-                case "Promoting":
-                    task.setStatus(TaskStatus.AUTO_PROMOTING);
-                    break;
-                case "Rebased with conflicts",
-                        "Classified with results":
-                    task.setStatus(TaskStatus.AUTO_CONFLICT);
-                    break;
-                default:
-                    break;
-            }
         }
     }
 
@@ -516,15 +433,11 @@ public class JiraTaskServiceImpl implements TaskService {
         return SecurityUtil.getUsername();
     }
 
-    private String toString(String projectKey, String taskKey) {
-        return projectKey + "/" + taskKey;
-    }
-
     @Override
     public AuthoringTask updateTask(String projectKey, String taskKey, AuthoringTaskUpdateRequest taskUpdateRequest) throws BusinessServiceException {
         try {
             Issue issue = getIssue(taskKey);
-            final List<AuthoringTask> authoringTasks = buildAuthoringTasks(Collections.singletonList(issue), true);
+            final List<AuthoringTask> authoringTasks = buildAuthoringTasks(new ArrayList<>(List.of(issue)), true);
             if (authoringTasks.isEmpty()) {
                 throw new ResourceNotFoundException("Task", taskKey);
             }
@@ -540,9 +453,9 @@ public class JiraTaskServiceImpl implements TaskService {
             boolean fieldUpdates = false;
 
             final org.ihtsdo.authoringservices.domain.User assignee = taskUpdateRequest.getAssignee();
-            TaskTransferRequest taskTransferRequest = null;
+            TaskChangeAssigneeRequest taskChangeAssigneeRequest = null;
             if (assignee != null) {
-                taskTransferRequest = updateTaskAssigneeAndReturnTaskTransferRequestIfAny(assignee, updateRequest, issue, taskTransferRequest);
+                taskChangeAssigneeRequest = updateTaskAssigneeAndReturnTaskTransferRequestIfAny(assignee, updateRequest, issue, taskChangeAssigneeRequest);
                 fieldUpdates = true;
             }
 
@@ -574,8 +487,8 @@ public class JiraTaskServiceImpl implements TaskService {
                 updateRequest.execute();
                 // If the JIRA update goes through, then we can move any
                 // UI-State over if required
-                if (taskTransferRequest != null) {
-                    transferTaskToNewAuthor(projectKey, taskKey, taskTransferRequest);
+                if (taskChangeAssigneeRequest != null) {
+                    transferTaskToNewAuthor(projectKey, taskKey, taskChangeAssigneeRequest);
                 }
             }
         } catch (JiraException e) {
@@ -586,59 +499,31 @@ public class JiraTaskServiceImpl implements TaskService {
         return retrieveTask(projectKey, taskKey, false);
     }
 
-    private TaskTransferRequest updateTaskAssigneeAndReturnTaskTransferRequestIfAny(org.ihtsdo.authoringservices.domain.User assignee, Issue.FluentUpdate updateRequest, Issue issue, TaskTransferRequest taskTransferRequest) throws BusinessServiceException {
+    private TaskChangeAssigneeRequest updateTaskAssigneeAndReturnTaskTransferRequestIfAny(org.ihtsdo.authoringservices.domain.User assignee, Issue.FluentUpdate updateRequest, Issue issue, TaskChangeAssigneeRequest taskChangeAssigneeRequest) throws BusinessServiceException {
         final String username = assignee.getUsername();
         if (username == null || username.isEmpty()) {
             updateRequest.field(Field.ASSIGNEE, null);
         } else {
-            updateRequest.field(Field.ASSIGNEE, getUser(username));
-            String currentUser = issue.getAssignee().getName();
-            if (currentUser != null && !currentUser.isEmpty() && !currentUser.equalsIgnoreCase(username)) {
-                taskTransferRequest = new TaskTransferRequest(currentUser, username);
+            updateRequest.field(Field.ASSIGNEE, getJiraUser(username));
+            String currentIssueAssignee = issue.getAssignee().getName();
+            if (currentIssueAssignee != null && !currentIssueAssignee.isEmpty() && !currentIssueAssignee.equalsIgnoreCase(username)) {
+                taskChangeAssigneeRequest = new TaskChangeAssigneeRequest(getUser(currentIssueAssignee), getUser(username), getUser(SecurityUtil.getUsername()));
             }
         }
-        return taskTransferRequest;
+        return taskChangeAssigneeRequest;
     }
 
     private void updateTaskReviewers(String projectKey, String taskKey, List<org.ihtsdo.authoringservices.domain.User> reviewers, AuthoringTask authoringTask, Issue.FluentUpdate updateRequest) throws BusinessServiceException {
-        List<User> users = new ArrayList<>();
+        List<net.rcarz.jiraclient.User> users = new ArrayList<>();
 
-        for (org.ihtsdo.authoringservices.domain.User reviewer : reviewers) {
-            users.add(getUser(reviewer.getUsername()));
+        for (User reviewer : reviewers) {
+            users.add(getJiraUser(reviewer.getUsername()));
         }
         // Send email to new reviewers
         emailService.sendTaskReviewAssignedNotification(projectKey, taskKey, authoringTask.getSummary(), getNewReviewers(authoringTask.getReviewers(), reviewers));
 
         updateRequest.field(jiraReviewerField, null);
         updateRequest.field(jiraReviewersField, users);
-    }
-
-    private void transferTaskToNewAuthor(String projectKey, String taskKey, TaskTransferRequest taskTransferRequest) {
-        try {
-            uiService.transferTask(projectKey, taskKey, taskTransferRequest);
-            String taskReassignMessage = "Your task %s has been assigned to %s";
-            String taskTakenMessage = "The task %s has been assigned to you by %s";
-            if (!SecurityUtil.getUsername().equalsIgnoreCase(taskTransferRequest.getCurrentUser()) &&
-                    !SecurityUtil.getUsername().equalsIgnoreCase(taskTransferRequest.getNewUser())) {
-                User newUser = getUser(taskTransferRequest.getNewUser());
-                User currentLoggedUser = getUser(SecurityUtil.getUsername());
-                String message = String.format(taskReassignMessage, taskKey, newUser.getDisplayName());
-                notificationService.queueNotification(taskTransferRequest.getCurrentUser(), new Notification(projectKey, taskKey, EntityType.AuthorChange, message));
-                message = String.format(taskTakenMessage, taskKey, currentLoggedUser.getDisplayName());
-                notificationService.queueNotification(taskTransferRequest.getNewUser(), new Notification(projectKey, taskKey, EntityType.AuthorChange, message));
-            } else if (taskTransferRequest.getNewUser().equalsIgnoreCase(SecurityUtil.getUsername())) {
-                User user = getUser(taskTransferRequest.getNewUser());
-                String message = String.format(taskReassignMessage, taskKey, user.getDisplayName());
-                notificationService.queueNotification(taskTransferRequest.getCurrentUser(), new Notification(projectKey, taskKey, EntityType.AuthorChange, message));
-            } else {
-                User user = getUser(taskTransferRequest.getCurrentUser());
-                String message = String.format(taskTakenMessage, taskKey, user.getDisplayName());
-                notificationService.queueNotification(taskTransferRequest.getNewUser(), new Notification(projectKey, taskKey, EntityType.AuthorChange, message));
-            }
-        } catch (BusinessServiceException e) {
-            logger.error("Unable to transfer UI State in " + taskKey + " from "
-                    + taskTransferRequest.getCurrentUser() + " to " + taskTransferRequest.getNewUser(), e);
-        }
     }
 
     private void updateTaskStatus(String projectKey, String taskKey, Issue issue, TaskStatus status, AuthoringTask authoringTask) throws JiraException, BusinessServiceException {
@@ -667,15 +552,14 @@ public class JiraTaskServiceImpl implements TaskService {
     }
 
 
-    private Collection<org.ihtsdo.authoringservices.domain.User> getNewReviewers(List<org.ihtsdo.authoringservices.domain.User> currentReviewers,
-                                                                                 List<org.ihtsdo.authoringservices.domain.User> reviewers) throws BusinessServiceException {
+    private Collection<User> getNewReviewers(List<User> currentReviewers, List<User> reviewers) throws BusinessServiceException {
         reviewers.removeAll(currentReviewers);
         Collection<org.ihtsdo.authoringservices.domain.User> results =
-                reviewers.stream().filter(r -> !SecurityUtil.getUsername().equals(r.getUsername())).collect(Collectors.toList());
+                reviewers.stream().filter(r -> !SecurityUtil.getUsername().equals(r.getUsername())).toList();
 
-        for (org.ihtsdo.authoringservices.domain.User user : results) {
+        for (User user : results) {
             if (user.getEmail() == null || user.getDisplayName() == null) {
-                User jiraUser = getUser(user.getUsername());
+                net.rcarz.jiraclient.User jiraUser = getJiraUser(user.getUsername());
                 user.setEmail(jiraUser.getEmail());
                 user.setDisplayName(jiraUser.getDisplayName());
             }
@@ -685,8 +569,17 @@ public class JiraTaskServiceImpl implements TaskService {
 
     @Override
     public User getUser(String username) throws BusinessServiceException {
+        net.rcarz.jiraclient.User result = getJiraUser(username);
+        User user = new User();
+        user.setUsername(result.getName());
+        user.setDisplayName(result.getDisplayName());
+        user.setEmail(result.getEmail());
+        return user;
+    }
+
+    private net.rcarz.jiraclient.User getJiraUser(String username) throws BusinessServiceException {
         try {
-            return User.get(getJiraClient().getRestClient(), username);
+            return net.rcarz.jiraclient.User.get(getJiraClient().getRestClient(), username);
         } catch (JiraException je) {
             throw new BusinessServiceException("Failed to recover user '" + username + "' from Jira instance.", je);
         }
@@ -764,7 +657,7 @@ public class JiraTaskServiceImpl implements TaskService {
             if (labelsString.contains(CRS_JIRA_LABEL)) {
                 for (String queue : taskStateChangeNotificationQueues) {
                     if ((isIntAuthoringTask(issue) && isIntTaskStateChangeQueue(queue))
-                        || (!isIntAuthoringTask(issue) && !isIntTaskStateChangeQueue(queue))) {
+                            || (!isIntAuthoringTask(issue) && !isIntTaskStateChangeQueue(queue))) {
                         messagingHelper.send(new ActiveMQQueue(queue), properties);
                     }
                 }
@@ -777,21 +670,6 @@ public class JiraTaskServiceImpl implements TaskService {
     private boolean isIntAuthoringTask(Issue issue) {
         List<IssueLink> issueLinks = issue.getIssueLinks();
         return issueLinks.stream().anyMatch(issueLink -> issueLink.getOutwardIssue().getKey().startsWith(intCrsIssueKeyPrefix));
-    }
-
-    private boolean isIntTaskStateChangeQueue(String queue) {
-        return queue.contains(INT_TASK_STATE_CHANGE_QUEUE);
-    }
-
-    private void setCrsConceptsIfAny(String projectKey, String taskKey, Map<String, String> properties) {
-        try {
-            String conceptsStr = uiService.retrieveTaskPanelStateWithoutThrowingResourceNotFoundException(projectKey, taskKey, SHARED, "crs-concepts");
-            if (StringUtils.isNotEmpty(conceptsStr)) {
-                properties.put("concepts", conceptsStr);
-            }
-        } catch (IOException e) {
-            logger.error("Error while reading crs-concepts.json for task {}. Message: {}", taskKey, e.getMessage());
-        }
     }
 
     private Transition getTransitionToOrThrow(Issue issue, TaskStatus newState)
@@ -807,15 +685,12 @@ public class JiraTaskServiceImpl implements TaskService {
 
     @Override
     public List<TaskAttachment> getTaskAttachments(String projectKey, String taskKey) throws BusinessServiceException {
-
         List<TaskAttachment> attachments = new ArrayList<>();
-        final RestClient restClient = getJiraClient().getRestClient();
-
         try {
             Issue issue = getIssue(taskKey);
 
             for (IssueLink issueLink : issue.getIssueLinks()) {
-                getTaskAttachment(issueLink, restClient, attachments, issue);
+                getCrsTaskAttachment(issueLink.getOutwardIssue().getKey(), attachments, issue.getKey());
             }
         } catch (JiraException e) {
             if (e.getCause() instanceof RestException restException && restException.getHttpStatusCode() == 404) {
@@ -827,21 +702,27 @@ public class JiraTaskServiceImpl implements TaskService {
         return attachments;
     }
 
-    private void getTaskAttachment(IssueLink issueLink, RestClient restClient, List<TaskAttachment> attachments, Issue issue) throws JiraException, BusinessServiceException {
-        Issue linkedIssue = issueLink.getOutwardIssue();
-
+    @Override
+    public void getCrsTaskAttachment(String issueLinkKey, List<TaskAttachment> attachments, String issueKey) throws BusinessServiceException {
         // need to forcibly retrieve the issue in order to get
         // attachments
-        Issue issue1 = this.getIssue(linkedIssue.getKey(), true);
-        Object organization = issue1.getField(jiraOrganizationField);
-        String crsId = issue1.getField(jiraCrsIdField).toString();
+
+        final RestClient restClient = getJiraClient().getRestClient();
+        Issue issue = null;
+        try {
+            issue = this.getIssue(issueLinkKey, true);
+        } catch (JiraException e) {
+            throw new BusinessServiceException(e);
+        }
+        Object organization = issue.getField(jiraOrganizationField);
+        String crsId = issue.getField(jiraCrsIdField).toString();
         if (crsId == null) {
             crsId = "Unknown";
         }
 
         boolean attachmentFound = false;
 
-        for (Attachment attachment : issue1.getAttachments()) {
+        for (Attachment attachment : issue.getAttachments()) {
 
             if (attachment.getFileName().equals("request.json")) {
 
@@ -852,7 +733,7 @@ public class JiraTaskServiceImpl implements TaskService {
                     final JSON attachmentJson = restClient
                             .get(contentUrl.substring(contentUrl.indexOf("secure")));
 
-                    TaskAttachment taskAttachment = new TaskAttachment(issue1.getKey(), crsId, attachmentJson.toString(), organization != null ? organization.toString() : null);
+                    TaskAttachment taskAttachment = new TaskAttachment(issue.getKey(), crsId, attachmentJson.toString(), organization != null ? organization.toString() : null);
 
                     attachments.add(taskAttachment);
 
@@ -867,7 +748,7 @@ public class JiraTaskServiceImpl implements TaskService {
 
         // if no attachments, create a blank one to link CRS ticket id
         if (!attachmentFound) {
-            TaskAttachment taskAttachment = new TaskAttachment(issue.getKey(), crsId, null, organization != null ? organization.toString() : null);
+            TaskAttachment taskAttachment = new TaskAttachment(issueKey, crsId, null, organization != null ? organization.toString() : null);
             attachments.add(taskAttachment);
         }
     }
@@ -881,6 +762,15 @@ public class JiraTaskServiceImpl implements TaskService {
                 throw new ResourceNotFoundException(TASK_NOT_FOUND_MSG + toString(projectKey, taskKey), e);
             }
             throw new BusinessServiceException("Failed to leave comment for task " + toString(projectKey, taskKey), e);
+        }
+    }
+
+    @Override
+    public void deleteIssueLink(String issueKey, String linkId) throws BusinessServiceException {
+        try {
+            JiraHelper.deleteIssueLink(getJiraClient(), issueKey, linkId);
+        } catch (JiraException e) {
+            throw new BusinessServiceException(e);
         }
     }
 }
